<resources>
    <string name="app_name" translatable="false">FirstAPP</string>
    <string name="btn_label">Button</string>
    <string name="hint_txt">Input your name</string>
    <string name="label_add1">+1 point</string>
    <string name="label_add2">+2 points</string>
    <string name="label_add3">+3 points</string>
    <string name="btn_reset_label">reset</string>
    <string name="initial_0">0</string>
    <string name="team_a">TeamA</string>
</resources>
