<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_reset_label"
        android:layout_marginBottom="77dp"
        android:onClick="btnReset"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-5dp"
        android:layout_marginLeft="-5dp"
        android:layout_marginTop="-2dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/teamName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/team_a"
            android:textSize="35sp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/initial_0"
            android:textSize="65sp"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/btn_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_add3"
            android:layout_marginBottom="16dp"
            android:onClick="btnAdd3"/>

        <Button
            android:id="@+id/btn_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_add2"
            android:layout_marginBottom="16dp"
            android:onClick="btnAdd2"/>

        <Button
            android:id="@+id/btn_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_add1"
            android:layout_marginBottom="16dp"
            android:onClick="btnAdd1"/>
    </LinearLayout>
</RelativeLayout>